fix: gap

--- a/packages/website-ue/src/components/Section/index.module.css
+++ b/packages/website-ue/src/components/Section/index.module.css
@@ -9,7 +9,6 @@
 
     display: flex;
     flex-direction: column;
-    gap: var(--space-5);
   }
 
   &[data-first="true"] .content {
